--- a/deploy-docker/backend-deploy.yml
+++ b/deploy-docker/backend-deploy.yml
@@ -6,3 +6,12 @@
       docker_image:
         name: vtandonv/communityhubbackend
         source: pull
+     
+     - name: Create back-end container
+       docker_container: 
+        name: springboot-con1
+        image: vtandonv/communityhubbackend
+        ports:
+          - "8090:8090"
+        
+      
